--- a/AR/assets/css/bootstrap.css
+++ b/AR/assets/css/bootstrap.css
@@ -281,6 +281,7 @@ button::-moz-focus-inner,
 [type="submit"]::-moz-focus-inner {
   padding: 0;
   border-style: none;
+  padding-bottom: 5%;
 }
 
 input[type="radio"],
@@ -3598,7 +3599,7 @@ input[type="button"].btn-block {
   flex: 1 1 auto;
   width: 1%;
   min-width: 0;
-  margin-bottom: 0;
+  margin-bottom: 15%;
 }
 
 .input-group > .form-control + .form-control,
@@ -3772,6 +3773,7 @@ input[type="button"].btn-block {
 .input-group > .input-group-prepend:first-child > .input-group-text:not(:first-child) {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
+  margin-bottom: 15%;
 }
 
 .custom-control {
