--- a/bootstrap.css
+++ b/bootstrap.css
@@ -3772,7 +3772,7 @@ input[type="button"].btn-block {
 .input-group > .input-group-prepend:first-child > .input-group-text:not(:first-child) {
   border-top-left-radius: 0;
   border-bottom-left-radius: 0;
-  argin-bottom: 15%;
+  margin-bottom: 15%;
 }
 
 .custom-control {
