--- a/estilo.css
+++ b/estilo.css
@@ -28,7 +28,7 @@ input, textarea, select {
 
 button {
     padding: 10px 15px;
-    background-color: #00D9A5;
+    background-color: #03735;
     color: #ffffff;
     border: none;
     border-radius: 4px;
