--- a/theme.css
+++ b/theme.css
@@ -870,7 +870,7 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 .breadcrumb-dark .breadcrumb-item a {
-  color: #00D9A5;
+  color: #07BE94;
 }
 
 .breadcrumb-dark .breadcrumb-item a:hover {
